--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -3,36 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="97dp"
+    android:background="#00BCD4"
+    android:orientation="horizontal"
+    android:layout_marginTop="3dp">
 
     <LinearLayout
-        android:layout_width="371dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
+            android:layout_marginLeft="2dp"
             android:id="@+id/textFirstName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
+
 
         <TextView
             android:id="@+id/textLastName"
+            android:layout_marginLeft="2dp"
+            android:textColor="@color/black"
+            android:textSize="18dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textEmail"
+            android:layout_marginLeft="2dp"
+            android:textColor="@color/black"
+            android:textSize="17dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textDegreeProgram"
+            android:layout_marginLeft="2dp"
+            android:textColor="@color/black"
+            android:textSize="17dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
